--- a/src/main/java/ulb/lisa/infoh400/labs2020/view/MainWindow.form
+++ b/src/main/java/ulb/lisa/infoh400/labs2020/view/MainWindow.form
@@ -109,8 +109,8 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="addImageButton" min="-2" pref="51" max="-2" attributes="0"/>
                                   <Component id="deleteImageButton" min="-2" pref="51" max="-2" attributes="0"/>
+                                  <Component id="addImageButton" min="-2" pref="51" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
@@ -125,6 +125,7 @@
                               </Group>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -354,7 +355,6 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/icons/noun_add_3029252.png"/>
         </Property>
-        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addImageButtonActionPerformed"/>
