--- a/labo_5-6/src/main/java/ulb/lisa/infoh400/labs2022/view/MainWindow.form
+++ b/labo_5-6/src/main/java/ulb/lisa/infoh400/labs2022/view/MainWindow.form
@@ -128,10 +128,7 @@
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="startSCPButton" max="32767" attributes="0"/>
-                  <Component id="jButton1" max="32767" attributes="0"/>
-              </Group>
+              <Component id="startSCPButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -193,14 +190,11 @@
                           <Component id="startSCPButton" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="editAppointmentButton" min="-2" max="-2" attributes="0"/>
-                              <Component id="deleteAppointmentButton" min="-2" max="-2" attributes="0"/>
-                              <Component id="editImageButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="deleteImageButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="editAppointmentButton" min="-2" max="-2" attributes="0"/>
+                          <Component id="deleteAppointmentButton" min="-2" max="-2" attributes="0"/>
+                          <Component id="editImageButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="deleteImageButton" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -474,14 +468,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="startSCPButtonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Start HL7"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
